# pyscgen-service

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile_backend  Dockerfile_frontend  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
app/: gunicorn_conf.py  main.py
app/configuration/: config.ini  getConfig.py
app/configuration/configparser/: wrapper.py
app/model/: validation_model.py
app/routers/: api_config.py  avro_generator.py  avro_validator.py  data_generator.py  json_analyze.py  pydantic_generator.py
app/service/: avro_generator.py  avro_validator.py  data_generator.py  json_analyzer.py  pydantic_generator.py
gui/: README.md  package-lock.json  package.json  start_gui.cmd
gui/src/: App.css  App.tsx
tests/: fastavro_test.py
tests/test_routers/: test_routers.py
