[tool.poetry]
name = "pyscgen-service"
version = "0.1.0"
description = "A "
authors = ["Florian Salfenmoser <florian.salfenmoser.dev@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.4.1"
gunicorn = "^20.1.0"
pymongo = "^4.0.1"
ibm-db = "^3.1.1"
nested-lookup = "^0.2.25"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
shortuuid = "^1.0.11"
glom = "^22.1.0"
pydantic-avro = "^0.4.2"
pyscgen = "^0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
